<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical|center_horizontal"
    tools:context="${relativePackage}.${activityClass}"
     >

<LinearLayout
    android:id="@+id/baseLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    
    android:orientation="vertical"
     >

  <!-- 
    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
     -->
    <Button
        android:id="@+id/tktInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/enter_ticket_info" />
     <Button
        android:id="@+id/extInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/extract_ticket_info" />
     
         <Button
        android:id="@+id/dispInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/disp_ticket_info" />
        <Button
        android:id="@+id/viewPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/view_plan" 
       />
         
        <Button
        android:id="@+id/planTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/title_activity_plan_your_travel" /> 
        
        <EditText
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" 
        android:hint="@string/add_sms"
        android:visibility="gone">
        </EditText>
        <Button
        android:id="@+id/addTkt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/add_tkt"
        android:visibility="gone" /> 
 
   
         <EditText
        android:id="@+id/addDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" 
        android:hint="@string/editHint"
        android:visibility="gone">
        </EditText>
            <Button
        android:id="@+id/updatePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/update_plan"
        android:visibility="gone" />
        
</LinearLayout>
</ScrollView>